[package]
name = "catmd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
notify = "6.1"
pulldown-cmark = "0.11"
ratatui = "0.26"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
